--- a/Schedular.API/appsettings.json
+++ b/Schedular.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings":{
+    "Token" : "Token for training"
+  },
+  
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db"
   },
