--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,16 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       {
+           "name": "Launch Angular",
+           "type": "chrome",
+           "request": "launch",
+           // "preLaunchTask": "npm: start",
+           "url": "http://localhost:4200/",
+           "webRoot": "${workspaceFolder}"
+       },
+
+
         {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
