--- a/Schedular.API/Schedular.API.csproj
+++ b/Schedular.API/Schedular.API.csproj
@@ -4,6 +4,7 @@
     <UserSecretsId>650c858e-00ba-40cb-a05c-fa1654953709</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.10.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0"/>
@@ -15,5 +16,6 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="AutoMapper" Version="9.0.0"/>
   </ItemGroup>
 </Project>
