--- a/Schedular.API/appsettings.json
+++ b/Schedular.API/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySetting": {
+    "CloudName": "dobpme3ct",
+    "ApiKey": "174716911219959",
+    "ApiSecret": "iw6YNRGMUMhOgIGd1M78gPDfVfg"
+  }
 }
