added prod configuration

--- a/Schedular.API/appsettings.json
+++ b/Schedular.API/appsettings.json
@@ -4,7 +4,7 @@
   },
   
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=localhost; Database=schedularapp; Uid=webuser; Pwd=password"
   },
   "Logging": {
     "LogLevel": {
