--- a/Schedular.API/Properties/launchSettings.json
+++ b/Schedular.API/Properties/launchSettings.json
@@ -20,10 +20,10 @@
     "Schedular.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
